--- a/resume.html
+++ b/resume.html
@@ -5,9 +5,9 @@
     <title>Ivan Gavrikov &#8211; QA Specialist</title>
     <!--Meta-->
     <meta charset=utf-8>
-    <link rel="apple-touch-icon" sizes="180x180" href="../ivan-qa/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../ivan-qa/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../ivan-qa/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../ivan-qa/favicon-apple-180x180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../ivan-qa/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../ivan-qa/favicon-16x16.png">
     <!--Plugins CSS-->
     <!--font-awesome-version 4.7.0-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
