--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Ivan Gavrikov &#8211; QA Specialist</title>
+    <title>Ivan Gavrikov &#8211; Resume</title>
     <!--Meta-->
     <meta charset=utf-8>
     <link rel="apple-touch-icon" sizes="180x180" href="../ivan-qa/favicon-apple-180x180.png">
