Re-built project page and back-to-top button
https://github.com/g1f/ivan-qa/issues/1
https://github.com/g1f/ivan-qa/issues/12

--- a/feedback.html
+++ b/feedback.html
@@ -16,12 +16,18 @@
 </head>
 
 <body id="top-anchor">
+    <!--back-to-top-->
+    <a href="#top-anchor" rel="top-anchor">
+        <div class="btn-back-to-top">
+            <i class="fa fa-arrow-up" aria-hidden="true"></i>
+        </div>
+    </a>
     <!--page-wrapper-->
     <div class="feedback-wrapper">
         <div class="top-wrapper">
             <!--theme-switcher-->
             <div class="dark-mode-section">
-                <button class="btn-dark">Dark Mode</button>
+                <button>Dark Mode</button>
             </div>
             <script src="../ivan-qa/scripts/dark-mode.js"></script>
             <!--top-section-->
@@ -29,15 +35,15 @@
                 <!--header-->
                 <header>
                     <div class="person-info">
-                        <h1 class="name"><a href="../ivan-qa/index.html"><i class="fa fa-cube" aria-hidden="true"></i>Ivan
+                        <h1 class="name"><a href="../ivan-qa/index.html"><i class="fa fa-user-o" aria-hidden="true"></i>Ivan
                                 Gavrikov</a></h1>
                         <h2 class="position">QA Specialist</h2>
                     </div>
                 </header>
 
             <!--nav-->
-            <nav>
-                <ul class="nav-item">
+            <nav class="top-nav">
+                <ul>
                     <a href="../ivan-qa/resume.html">
                         <li>Resume</li>
                     </a>
