--- a/resume.html
+++ b/resume.html
@@ -17,10 +17,17 @@
 </head>
 
 <body id="top-anchor">
+    <!--back-to-top-->
+    <a href="#top-anchor" rel="top-anchor">
+        <div class="btn-back-to-top">
+            <i class="fa fa-arrow-up" aria-hidden="true"></i>
+        </div>
+    </a>
     <div class="resume-wrapper">
         <!--header-->
         <header class="header">
             <div class="person-info">
+                <div class="btn-back-to-main"><a href="../ivan-qa/index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i>Back to main</a></div>
                 <h2 class="name">Ivan Gavrikov</h2>
                 <h3 class="position">Quality Assurance Specialist</h3>
                 <div class="contact-links">
