Breadcrumbs and clarified vars in CSS for colors
https://github.com/g1f/ivan-qa/issues/2
https://github.com/g1f/ivan-qa/issues/13

--- a/projects.html
+++ b/projects.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" type="text/css" href="../ivan-qa/styles/projects.css">
 </head>
     
-<body id="top-anchor">
+<body id="top">
     <!--back-to-top-->
-    <a href="#top-anchor" rel="top-anchor">
+    <a href="#top" rel="back-to-top">
         <div class="btn-back-to-top">
             <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </div>
@@ -28,7 +28,7 @@
         <div class="top-wrapper">
             <!--theme-switcher-->
             <div class="dark-mode-section">
-                <button>Dark Mode</button>
+                <button class="btn-dark-mode">Dark Mode</button>
             </div>
             <script src="../ivan-qa/scripts/dark-mode.js"></script>
             <!--top-section-->
@@ -64,7 +64,14 @@
             </nav>
             </div>
         </div>
-
+        <!--main-nav-menu-->
+        <nav class="main-nav">
+            <ul>
+                <li><a href="../ivan-qa/index.html">Main</a></li>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <li>Projects</li>
+            </ul>
+        </nav>
         <!--main-wrapper-->
         <div class="main-wrapper">
             <!--main-section-->
