--- a/resume.html
+++ b/resume.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" type="text/css" href="../ivan-qa/styles/resume.css">
 </head>
 
-<body id="top-anchor">
+<body id="top">
     <!--back-to-top-->
-    <a href="#top-anchor" rel="top-anchor">
+    <a href="#top" rel="back-to-top">
         <div class="btn-back-to-top">
             <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </div>
