--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" type="text/css" href="../ivan-qa/styles/index.css">
 </head>
 
-<body id="top-anchor">
+<body id="top">
     <!--back-to-top-->
-    <a href="#top-anchor" rel="top-anchor">
+    <a href="#top" rel="back-to-top">
         <div class="btn-back-to-top">
             <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </div>
@@ -28,7 +28,7 @@
         <div class="top-wrapper">
             <!--theme-switcher-->
             <div class="dark-mode-section">
-                <button>Dark Mode</button>
+                <button class="btn-dark-mode">Dark Mode</button>
             </div>
             <script src="../ivan-qa/scripts/dark-mode.js"></script>
             <!--top-section-->
