Added main articles and section with useful links
https://github.com/g1f/ivan-qa/issues/3
https://github.com/g1f/ivan-qa/issues/5

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="gallery-section">
                 <h2>My Certificates</h2>
                 <div class="dislayed-img-wrapper">
-                    <img class="displayed-img" src="../ivan-qa/images/gallery/ISTQB-certificate.png">
+                    <img class="displayed-img" src="../ivan-qa/images/gallery/ISTQB-certificate.png" alt="Current displayed image">
                 </div>
 
                 <div class="thumb-bar">
