--- a/projects.html
+++ b/projects.html
@@ -77,57 +77,198 @@
             <!--main-section-->
             <main class="main-section">
                 <section class="main-section-item">
-                    <h2 id="calc-anchor"><a href="../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
-                    <p>There is description</p>
+                    <div class="projects-meta">
+                    <h3 id="my-test-activites"><i class="fa fa-suitcase" aria-hidden="true"></i></i><a href="../ivan-qa/projects.html">My Test Activities</a></h3>
+                    <p>There are examples of the test strategy, test plan, test cases and tools I use daily.</p>
+                    </div>
+                    <h4>Test strategy & plan</h4>
+                    <ul>
+                        <li><a href="#">
+                            Test strategy.
+                            </a>
+                        </li>
+                        <li><a href="#">
+                            Test plan.
+                            </a>
+                        </li>
+                    </ul>
+
+                    <h4>Test case & Bug Report</h4>
+                    <ul>
+                        <li><a href="#">
+                            Test case
+                            </a>
+                        </li>
+                        <li><a href="#">
+                            Bug report
+                            </a>
+                        </li>
+                    </ul>
+
+                    <h4>Tools</h4>
+                    <h5>Project Management</h5>
+                    <ul>
+                        <li>Tool1</li>
+                        <li>Tool2</li>
+                    </ul>
+                    <h5>Bug Management</h5>
+                    <ul>
+                        <li>Tool1</li>
+                        <li>Tool2</li>
+                    </ul>
+
+                    <h5>Test Case Management</h5>
+                    <ul>
+                        <li>Tool1</li>
+                        <li>Tool2</li>
+                    </ul>
+
+                    <h5>Mobile Testing</h5>
+                    <ul>
+                        <li>Tool1</li>
+                        <li>Tool2</li>
+                    </ul>
+
+                    <h5>Accessibility Testing</h5>
+                    <ul>
+                        <li>Tool1</li>
+                        <li>Tool2</li>
+                    </ul>
+
+                    <h5>API Testing</h5>
+                    <ul>
+                        <li>Tool1</li>
+                        <li>Tool2</li>
+                    </ul>
+
+                    <h5>Perfomance Testing</h5>
+                    <ul>
+                        <li>Tool1</li>
+                        <li>Tool2</li>
+                    </ul>
+
+                    <h4>Companies and vendors</h4>
+                    <ul>
+                        <li><a href="#">
+                            There is a list of companies and vendors I tested.
+                            </a>
+                        </li>
+                    </ul>
+
+                    <h4>Exploratory testing</h4>
+                    <ul>
+                        <li><a href="#">
+                            Some methods that help me to test the functionality of the software.
+                            </a>
+                        </li>
+                    </ul>
                 </section>
+
                 <section class="main-section-item">
-                    <h2 id="calc-anchor"><a href="../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
-                    <p>There is description</p>
+                    <div class="projects-meta">
+                    <h3 id="my-simple-calculator"><i class="fa fa-calculator" aria-hidden="true"></i><a href="../ivan-qa/projects/calculator.html">Simple Calculator</a></h3>
+                    <p>There is an example of my simple calculator written on JavaScript.</p>
+                    </div>
                 </section>
+
                 <section class="main-section-item">
-                    <h2 id="calc-anchor"><a href="../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
-                    <p>There is description</p>
+                    <div class="projects-meta">
+                    <h3 id="useful-qa-articles"><i class="fa fa-thumb-tack" aria-hidden="true"></i>Useful QA Articles</a></h3>
+                    <p>There are some useful articles which can be used to gain or refresh your current experience and knowledge.</p>
+                    </div>
+                    <h4>Roadmaps</h4>
+                    <ul>
+                        <li><a href="https://roadmap.sh/qa">
+                            Steps to follow in order to become a modern QA Engineer<i class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li><a href="https://medium.com/slalom-build/quality-engineer-learning-roadmap-fddfcb77409e" rel="Quality Engineer Learning Roadmap">
+                            A beginner’s guide to the skills, tools, and technologies you need for a career as a Quality Engineer or SDET<i class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                    </ul>
+
+                    <h4>Standarts</h4>
+                    <ul>
+                        <li><a href="https://www.w3.org/WAI/standards-guidelines/">
+                            W3C Accessibility Standards<i class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                        </li> 
+                    </ul>
+
+                    <h4>Checklists</h4>
+                    <ul>
+                        <li><a href="https://www.guru99.com/complete-web-application-testing-checklist.html">
+                            Test Cases Example for Web Application<i class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        </a>
+                        <li><a href="https://www.softwaretestinghelp.com/sample-test-cases-testing-web-desktop-applications/">
+                            180+ Web Application Testing Example Test Cases<i class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                    </ul>
+
+                    <h4>API</h4>
+                    <ul>
+                        <li><a href="https://www.softwaretestinghelp.com/api-testing-tutorial/">
+                            API Testing Tutorial: A Complete Guide For Beginners<i class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                        </li> 
+                        <li><a href="https://developer.spotify.com/documentation/web-api">
+                            Spotify Web API - Documentation for Developers<i class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                        </li> 
+                    </ul>
+
+                    <h4>Payment</h4>
+                    <ul>
+                        <li><a href="https://stripe.com/docs/testing">
+                            Stripe Docs - Simulate payments to test your integration<i class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                        </li> 
+                        <li><a href="https://docs.adyen.com/development-resources/testing/test-card-numbers/">
+                            Adyen Docs - Test card numbers and create your own cards<i class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                        </li> 
+                    </ul>
+
+                    <h4>Accessibility</h4>
+                    <ul>
+                        <li><a href="https://www.w3.org/WAI/ARIA/apg/patterns/">
+                            ARIA Authoring Practices Guide (APG)<i class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                        </li> 
+                    </ul>
+
+                    <h4>Databases</h4>
+                    <ul>
+                        <li><a href="https://www.sqlservertutorial.net/sql-server-basics/">
+                            Easy, fast, and efficient way to master SQL Server<i class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                        </li> 
+                        <li><a href="https://joins.spathon.com/">
+                            JOINs visual explanation<i class="fa fa-external-link" aria-hidden="true"></i>
+                            </a>
+                        </li> 
+                    </ul>
+                    
                 </section>
-                <section class="main-section-item">
-                    <h2 id="calc-anchor"><a href="../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
-                    <p>There is description</p>
-                </section>
-                <section class="main-section-item">
-                    <h2 id="calc-anchor"><a href="../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
-                    <p>There is description</p>
-                </section>
-                <section class="main-section-item">
-                    <h2 id="calc-anchor"><a href="../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
-                    <p>There is description</p>
-                </section>
-                <section class="main-section-item">
-                    <h2 id="calc-anchor"><a href="../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
-                    <p>There is description</p>
-                </section>
-                <section class="main-section-item">
-                    <h2 id="calc-anchor"><a href="../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
-                    <p>There is description</p>
-                </section>
-                <section class="main-section-item">
-                    <h2 id="calc-anchor"><a href="../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
-                    <p>There is description</p>
-                </section>
-                <section class="main-section-item">
-                    <h2 id="calc-anchor"><a href="../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
-                    <p>There is description</p>
-                </section>
-                <section class="main-section-item">
-                    <h2 id="calc-anchor"><a href="../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
-                    <p>There is description</p>
-                </section>
+
             </main>
         
             <!--side-section-->
             <aside class="side-section">
-                <h3>Articles</h3>
+                <h3>Navigation</h3>
                 <ul class="side-section-nav">
-                    <a href=#calc-anchor rel="calc-anchor">
-                        <li>Calculator</li>
+                    <a href=#my-test-activites rel="my-test-activites">
+                        <li>My Test Activities</li>
+                    </a>
+                    <a href=#my-simple-calculator rel="my-simple-calculator">
+                        <li>My Simple Calculator</li>
+                    </a>
+                    <a href="#useful-qa-articles" rel="useful-qa-articles">
+                        <li>Useful QA Articles</li>
                     </a>
                 </ul>
             </aside>
