--- a/resume.html
+++ b/resume.html
@@ -77,7 +77,7 @@
                 <h2><i class="fa fa-briefcase" aria-hidden="true"></i>QA Experience</h2>
                 <!--section-->
                 <section class="section-wrapper">
-                    <div class="meta">
+                    <div class="resume-meta">
                         <div class="upper-row">
                             <h3 class="job-title">QA Specialist (freelance)</h3>
                             <div class="date">June 2022 – Present</div>
@@ -100,7 +100,7 @@
                 </section>
                 <!--section-->
                 <section class="section-wrapper">
-                    <div class="meta">
+                    <div class="resume-meta">
                         <div class="upper-row">
                             <h3 class="job-title">Technical Department Manager</h3>
                             <div class="date">January 2021 - March 2022</div>
@@ -121,7 +121,7 @@
                 </section>
                 <!--section-->
                 <section class="section-wrapper">
-                    <div class="meta">
+                    <div class="resume-meta">
                         <div class="upper-row">
                             <h3 class="job-title">QA Tester</h3>
                             <div class="date">September 2019 – October 2020</div>
@@ -146,7 +146,7 @@
                 <h2><i class="fa fa-briefcase" aria-hidden="true"></i>Telecom Experience</h2>
                 <!--section-->
                 <section class="section-wrapper">
-                    <div class="meta">
+                    <div class="resume-meta">
                         <div class="upper-row">
                             <h3 class="job-title">Telecom Lead Engineer</h3>
                             <div class="date">May 2018 – December 2020</div>
@@ -169,7 +169,7 @@
                 </section>
                 <!--section-->
                 <section class="section-wrapper">
-                    <div class="meta">
+                    <div class="resume-meta">
                         <div class="upper-row">
                             <h3 class="job-title">Telecom Field Engineer</h3>
                             <div class="date">June 2017 – May 2018</div>
@@ -187,7 +187,7 @@
                 </section>
                 <!--section-->
                 <section class="section-wrapper">
-                    <div class="meta">
+                    <div class="resume-meta">
                         <div class="upper-row">
                             <h3 class="job-title">Telecom Maintenance Engineer</h3>
                             <div class="date">July 2015 – June 2017</div>
@@ -211,7 +211,7 @@
                 </section>
                 <!--section-->
                 <section class="section-wrapper">
-                    <div class="meta">
+                    <div class="resume-meta">
                         <div class="upper-row">
                             <h3 class="job-title">Technical Support Engineer</h3>
                             <div class="date">May 2015 – July 2015</div>
@@ -232,7 +232,7 @@
                 </section>
                 <!--section-->
                 <section class="section-wrapper">
-                    <div class="meta">
+                    <div class="resume-meta">
                         <div class="upper-row">
                             <h3 class="job-title">Project Design Engineer</h3>
                             <div class="date">July 2013 – May 2015</div>
@@ -262,7 +262,7 @@
                 </section>
                 <!--section-->
                 <section class="section-wrapper">
-                    <div class="meta">
+                    <div class="resume-meta">
                         <div class="upper-row">
                             <h3 class="job-title">Telecom Field Engineer</h3>
                             <div class="date">June 2012 – July 2013</div>
@@ -287,7 +287,7 @@
                 <!--License section-->
                 <section class="section-wrapper">
                     <!--course-->
-                    <div class="meta">
+                    <div class="resume-meta">
                         <h3 class="job-title">ASTQB - ISTQB in the U.S.</h3>
                         <div class="date">Issued March 2023</div>
                         <span>Certified Tester, Foundation Level</span><br>
@@ -300,7 +300,7 @@
                 <h2><i class="fa fa-book" aria-hidden="true"></i>Courses</h2>
                 <section class="section-wrapper">
                     <!--course-->
-                    <div class="meta">
+                    <div class="resume-meta">
                         <h3 class="job-title">Udemy</h3>
                         <div class="date">Issued Sept 2022</div>
                         <a id="edu-link"
@@ -308,14 +308,14 @@
                             target="_blank">ISTQB Foundation Level 2022 Complete Training</a>
                     </div>
                     <!--course-->
-                    <div class="meta">
+                    <div class="resume-meta">
                         <h3 class="job-title">Coursera</h3>
                         <div class="date">Issued June 2022</div>
                         <a id="edu-link"
                             href="https://drive.google.com/file/d/1FEw7gt9UCG9SbDLNrx5JTaYHEABX4SDq/view?usp=sharing"
                             target="_blank">Atlassian Jira</a>
                     </div>
-                    <div class="meta">
+                    <div class="resume-meta">
                         <h3 class="job-title">Coursera</h3>
                         <div class="date">Issued May 2022</div>
                         <a id="edu-link"
