Minore changes due to listed issues
https://github.com/g1f/ivan-qa/issues/3
https://github.com/g1f/ivan-qa/issues/5

--- a/projects/calculator.html
+++ b/projects/calculator.html
@@ -67,6 +67,16 @@
             </div>
         </div>
 
+        <!--main-nav-menu-->
+        <nav class="main-nav">
+            <ul>
+                <li><a href="../index.html">Main</a></li>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <li><a href="../projects.html">Projects</a></li>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <li>Calculator</li>
+            </ul>
+        </nav>
         <!--main-wrapper-->
         <div class="main-wrapper">
         <!--main-section-->
