Closed 3 issues - Test Plan, Test Strategy + CSS
https://github.com/g1f/ivan-qa/issues/17
https://github.com/g1f/ivan-qa/issues/18
https://github.com/g1f/ivan-qa/issues/6

--- a/feedback.html
+++ b/feedback.html
@@ -44,21 +44,20 @@
             <!--nav-->
             <nav class="top-nav">
                 <ul>
-                    <a href="../ivan-qa/resume.html">
-                        <li>Resume</li>
-                    </a>
+                    <li><a href="../ivan-qa/resume.html">Resume</li></a>
+
                     <li>|</li>
-                    <a href="../ivan-qa/projects.html">
-                        <li>Projects</li>
-                    </a>
+
+                    <li><a href="../ivan-qa/projects.html">Projects</li></a>
+
                     <li>|</li>
-                    <a href="https://github.com/g1f">
-                        <li>GitHub</li>
-                    </a>
+
+                    <li><a href="https://github.com/g1f">GitHub</a></li>
+                    
                     <li>|</li>
-                    <a href="../ivan-qa/feedback.html">
-                        <li>Feedback</li>
-                    </a>
+
+                    <li><a href="../ivan-qa/feedback.html">Feedback</li></a>
+                    
                 </ul>
             </nav>
             </div>
