--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@
             <!--main-section-->
             <main class="main-section">
                 <!--section-->
-                <section class="section-wrapper">
+                <section class="main-section-item">
                     <h2><i class="fa fa-info" aria-hidden="true"></i>Summary</h2>
                     <p>
                         ISTQB certified Quality Assurance specialist with 3 years of experience in Quality Assurance and
@@ -76,8 +76,8 @@
                 <!--Experience title-->
                 <h2><i class="fa fa-briefcase" aria-hidden="true"></i>QA Experience</h2>
                 <!--section-->
-                <section class="section-wrapper">
-                    <div class="resume-meta">
+                <section class="main-section-item">
+                    <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">QA Specialist (freelance)</h3>
                             <div class="date">June 2022 – Present</div>
@@ -99,8 +99,8 @@
                     </div>
                 </section>
                 <!--section-->
-                <section class="section-wrapper">
-                    <div class="resume-meta">
+                <section class="main-section-item">
+                    <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Technical Department Manager</h3>
                             <div class="date">January 2021 - March 2022</div>
@@ -120,8 +120,8 @@
                     </div>
                 </section>
                 <!--section-->
-                <section class="section-wrapper">
-                    <div class="resume-meta">
+                <section class="main-section-item">
+                    <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">QA Tester</h3>
                             <div class="date">September 2019 – October 2020</div>
@@ -145,8 +145,8 @@
                 <!--Experience title-->
                 <h2><i class="fa fa-briefcase" aria-hidden="true"></i>Telecom Experience</h2>
                 <!--section-->
-                <section class="section-wrapper">
-                    <div class="resume-meta">
+                <section class="main-section-item">
+                    <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Telecom Lead Engineer</h3>
                             <div class="date">May 2018 – December 2020</div>
@@ -168,8 +168,8 @@
                     </div>
                 </section>
                 <!--section-->
-                <section class="section-wrapper">
-                    <div class="resume-meta">
+                <section class="main-section-item">
+                    <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Telecom Field Engineer</h3>
                             <div class="date">June 2017 – May 2018</div>
@@ -186,8 +186,8 @@
                     </div>
                 </section>
                 <!--section-->
-                <section class="section-wrapper">
-                    <div class="resume-meta">
+                <section class="main-section-item">
+                    <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Telecom Maintenance Engineer</h3>
                             <div class="date">July 2015 – June 2017</div>
@@ -210,8 +210,8 @@
                     </div>
                 </section>
                 <!--section-->
-                <section class="section-wrapper">
-                    <div class="resume-meta">
+                <section class="main-section-item">
+                    <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Technical Support Engineer</h3>
                             <div class="date">May 2015 – July 2015</div>
@@ -231,8 +231,8 @@
                     </div>
                 </section>
                 <!--section-->
-                <section class="section-wrapper">
-                    <div class="resume-meta">
+                <section class="main-section-item">
+                    <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Project Design Engineer</h3>
                             <div class="date">July 2013 – May 2015</div>
@@ -261,8 +261,8 @@
                     </div>
                 </section>
                 <!--section-->
-                <section class="section-wrapper">
-                    <div class="resume-meta">
+                <section class="main-section-item">
+                    <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Telecom Field Engineer</h3>
                             <div class="date">June 2012 – July 2013</div>
@@ -285,9 +285,9 @@
                 <!--Education section-->
                 <h2><i class="fa fa-certificate" aria-hidden="true"></i>Licenses and certifications</h2>
                 <!--License section-->
-                <section class="section-wrapper">
+                <section class="main-section-item">
                     <!--course-->
-                    <div class="resume-meta">
+                    <div class="meta">
                         <h3 class="job-title">ASTQB - ISTQB in the U.S.</h3>
                         <div class="date">Issued March 2023</div>
                         <span>Certified Tester, Foundation Level</span><br>
@@ -298,9 +298,9 @@
                 </section>
                 <!--Courses section-->
                 <h2><i class="fa fa-book" aria-hidden="true"></i>Courses</h2>
-                <section class="section-wrapper">
+                <section class="main-section-item">
                     <!--course-->
-                    <div class="resume-meta">
+                    <div class="meta">
                         <h3 class="job-title">Udemy</h3>
                         <div class="date">Issued Sept 2022</div>
                         <a id="edu-link"
@@ -308,14 +308,14 @@
                             target="_blank">ISTQB Foundation Level 2022 Complete Training</a>
                     </div>
                     <!--course-->
-                    <div class="resume-meta">
+                    <div class="meta">
                         <h3 class="job-title">Coursera</h3>
                         <div class="date">Issued June 2022</div>
                         <a id="edu-link"
                             href="https://drive.google.com/file/d/1FEw7gt9UCG9SbDLNrx5JTaYHEABX4SDq/view?usp=sharing"
                             target="_blank">Atlassian Jira</a>
                     </div>
-                    <div class="resume-meta">
+                    <div class="meta">
                         <h3 class="job-title">Coursera</h3>
                         <div class="date">Issued May 2022</div>
                         <a id="edu-link"
@@ -327,14 +327,14 @@
             <!--side-section-->
             <aside class="side-section">
                 <!--section-->
-                <section class="side-section-wrapper">
+                <section class="side-section-item">
                     <h2><i class="fa fa-graduation-cap" aria-hidden="true"></i>Education</h2>
                     <h4>Moscow University of Radio Engineering, Electronics and Informatics</h4>
                     <h5>M.S. in Computer Technologies in Optoelectronics</h5>
                     <div class="date">2007 - 2013</div>
                 </section>
                 <!--section-->
-                <section class="side-section-wrapper">
+                <section class="side-section-item">
                     <div class="side-lang">
                         <h2><i class="fa fa-language" aria-hidden="true"></i></i>Languages</h2>
                         <h4>English</h4>
@@ -346,7 +346,7 @@
                     </div>
                 </section>
                 <!--section-->
-                <section class="side-section-wrapper">
+                <section class="side-section-item">
                     <h2><i class="fa fa-plus" aria-hidden="true"></i>Soft Skills</h2>
                     <ul class="side-skill-list">
                         <li>Teamwork</li>
@@ -357,7 +357,7 @@
                     </ul>
                 </section>
                 <!--section-->
-                <section class="side-section-wrapper">
+                <section class="side-section-item">
                     <h2><i class="fa fa-desktop" aria-hidden="true"></i>Hard Skills</h2>
                     <ul class="side-skill-list">
                         <li>HTML5</li>
