Closed 3 issues - Test Plan, Test Strategy + CSS
https://github.com/g1f/ivan-qa/issues/17
https://github.com/g1f/ivan-qa/issues/18
https://github.com/g1f/ivan-qa/issues/6

--- a/projects/calculator.html
+++ b/projects/calculator.html
@@ -38,7 +38,7 @@
                 <!--header-->
                 <header>
                     <div class="person-info">
-                        <h1 class="name"><a href="../../ivan-qa/index.html"><i class="fa fa-cube" aria-hidden="true"></i>Ivan
+                        <h1 class="name"><a href="../../ivan-qa/index.html"><i class="fa fa-user-o" aria-hidden="true"></i>Ivan
                                 Gavrikov</a></h1>
                         <h2 class="position">QA Specialist</h2>
                     </div>
