--- a/feedback.html
+++ b/feedback.html
@@ -12,7 +12,7 @@
     <!--font-awesome-version 4.7.0-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Theme CSS-->
-    <link rel="stylesheet" type="text/css" href="../ivan-qa/styles/main-style.css">
+    <link rel="stylesheet" type="text/css" href="../ivan-qa/styles/main.css">
 </head>
 
 <body id="top">
