--- a/resume.html
+++ b/resume.html
@@ -12,8 +12,7 @@
     <!--font-awesome-version 4.7.0-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Theme CSS-->
-    <link rel="stylesheet" type="text/css" href="../ivan-qa/styles/main-style.css">
-    <link rel="stylesheet" type="text/css" href="../ivan-qa/styles/resume.css">
+    <link rel="stylesheet" type="text/css" href="../ivan-qa/styles/main.css">
 </head>
 
 <body id="top">
@@ -369,7 +368,7 @@
                         <li>Postman</li>
                         <li>Fiddler</li>
                         <li>Browser Console</li>
-                        <li>SDK Platform Tools</li>
+                        <li>Android SDK Tools</li>
                         <li>Android Studio</li>
                         <li>GitHub</li>
                         <li>Atlassian Jira</li>
